--- a/index.htm
+++ b/index.htm
@@ -8,8 +8,8 @@ HREF="http://www.sophiecavadini.com/favicon.ico">
 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>Sophie Cavadini|Scenographe|Costumiere</title>
-<meta name="Keywords" content="scénographe, scenographe, scénographie, scenographie, décorateur, decorateur, décoratrice, decoratrice, théatre, theatre, théâtre, cinema, cinéma, décoration, decoration, spectacle, scène, scene, sophie cavadini, decors, decor, décor, décors, evenementiel, arts du spectacle, chef decorateur, chef decoratrice, chef deco, chef décorateur, chef déco, chef décoratrice, costumes, costume, costumière, costumiere">
-<meta name="description" content="Création et réalisation de scénographies et costumes de théâtre, décors de cinéma, du classique au contemporain. Basée sur Paris.">
+<meta name="Keywords" content="scÃ©nographe, scenographe, scÃ©nographie, scenographie, dÃ©corateur, decorateur, dÃ©coratrice, decoratrice, thÃ©atre, theatre, thÃ©Ã¢tre, cinema, cinÃ©ma, dÃ©coration, decoration, spectacle, scÃ¨ne, scene, sophie cavadini, decors, decor, dÃ©cor, dÃ©cors, evenementiel, arts du spectacle, chef decorateur, chef decoratrice, chef deco, chef dÃ©corateur, chef dÃ©co, chef dÃ©coratrice, costumes, costume, costumiÃ¨re, costumiere">
+<meta name="description" content="CrÃ©ation et rÃ©alisation de scÃ©nographies et costumes de thÃ©Ã¢tre, dÃ©cors de cinÃ©ma, du classique au contemporain. BasÃ©e sur Paris.">
 		
 <link rel="shortcut icon" href="favicon.ico">
 <style type="text/css">
